--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       PORT: 3000
       HOSTNAME: 0.0.0.0
       # Frontend Configuration
-      NEXT_PUBLIC_API_URL: https://10.170.0.4/api
+      NEXT_PUBLIC_API_URL: http://backend:3001/api
       NEXT_PUBLIC_APP_NAME: E-Shop
       NEXT_PUBLIC_APP_URL: https://10.170.0.4
       # Next.js Configuration
