--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -142,6 +142,12 @@ services:
   mailpit:
     image: axllent/mailpit:latest
     container_name: eshop-mailpit
+    environment:
+      SMTP_HOST: mailpit
+      SMTP_PORT: 1025
+      SMTP_USER: mailpit
+      SMTP_PASSWORD: mailpit
+      SMTP_FROM: noreply@eshop.com
     ports:
       - "8025:8025"   # Web UI
       - "1025:1025"   # SMTP
