--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -49,6 +49,11 @@ services:
       SENTRY_DSN: ${SENTRY_DSN}
       # Payments (Stripe)
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      # Demo Data Seeding (only works in demo/development environments)
+      # WARNING: Setting this to "true" will DELETE all existing data and reseed
+      # Only works when NODE_ENV is "demo" or "development"
+      # Production environments will never seed, even if this is set to "true"
+      SEED_DEMO_DATA: ${SEED_DEMO_DATA:-false}
 
     volumes:
       # Persist uploads and logs
