--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.59.0",
+    "recharts": "^2.15.0",
     "same-runtime": "^0.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
