--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -49,6 +49,12 @@ services:
       SENTRY_DSN: ${SENTRY_DSN}
       # Payments (Stripe)
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      # Email Configuration (SMTP)
+      SMTP_HOST: ${SMTP_HOST:-mailpit}
+      SMTP_PORT: ${SMTP_PORT:-1025}
+      SMTP_USER: ${SMTP_USER:-mailpit}
+      SMTP_PASSWORD: ${SMTP_PASSWORD:-mailpit}
+      SMTP_FROM: ${SMTP_FROM:-noreply@eshop.com}
       # Demo Data Seeding (only works in demo/development environments)
       # WARNING: Setting this to "true" will DELETE all existing data and reseed
       # Only works when NODE_ENV is "demo" or "development"
@@ -65,6 +71,8 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      mailpit:
+        condition: service_started
     networks:
       - eshop-network
       
