--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,5 +1,54 @@
 services:
   # ========================================
+  # PostgreSQL Service (Production)
+  # ========================================
+  postgres:
+    image: postgres:18-alpine
+    container_name: eshop-postgres
+    environment:
+      POSTGRES_DB: ${DB_NAME:-eshop}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_HOST_AUTH_METHOD: trust  # Add this for initial setup
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./backups:/backups
+    networks:
+      - eshop-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    profiles:
+      - postgres
+      - all
+
+  # ========================================
+  # Redis Service (Production)
+  # ========================================
+  redis:
+    image: redis:8.2-alpine
+    container_name: eshop-redis
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    volumes:
+      - redis_data:/data
+    networks:
+      - eshop-network
+    restart: unless-stopped
+    command: redis-server --requirepass ${REDIS_PASSWORD:-defaultpassword} --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+    profiles:
+      - redis
+      - all
+
+  # ========================================
   # Nginx Reverse Proxy (Optional)
   # ========================================
   nginx:
@@ -17,8 +66,43 @@ services:
     restart: unless-stopped
     profiles:
       - nginx
+      - all
+
+# Run a dev SMTP server like Mailpit/MailHog in Docker
+# ========================================
+# Mailpit Service
+# ========================================
+  mailpit:
+    image: axllent/mailpit:latest
+    container_name: eshop-mailpit
+    environment:
+      SMTP_HOST: mailpit
+      SMTP_PORT: 1025
+      SMTP_USER: mailpit
+      SMTP_PASSWORD: mailpit
+      SMTP_FROM: noreply@eshop.com
+    ports:
+      - "8025:8025"   # Web UI
+      - "1025:1025"   # SMTP
+    networks:
+      - eshop-network
+    restart: unless-stopped
+    profiles:
+      - mailpit
+      - all
 
 networks:
   eshop-network:
+    name: eshop-network
     driver: bridge
-    external: true
+
+# ========================================
+# Volumes
+# ========================================
+volumes:
+  postgres_data:
+    name: eshop-postgres-data
+    driver: local
+  redis_data:
+    name: eshop-redis-data
+    driver: local
