--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - eshop-network
       
     restart: unless-stopped
-    
+
     healthcheck:
       test: ["CMD-SHELL", "curl -fsSL -H 'x-forwarded-proto: https' http://localhost:3001/api/monitoring/health || exit 1"]
       interval: 30s
@@ -85,48 +85,51 @@ services:
       retries: 3
       start_period: 60s
 
-  # ========================================
-  # Redis Service (Production)
-  # ========================================
-  redis:
-    image: redis:8.2-alpine
-    container_name: eshop-redis
-    environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
-    volumes:
-      - redis_data:/data
-    networks:
-      - eshop-network
-    restart: unless-stopped
-    command: redis-server --requirepass ${REDIS_PASSWORD:-defaultpassword} --appendonly yes
-    healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
-      interval: 30s
-      timeout: 3s
-      retries: 3
+  # # ========================================
+  # # Redis Service (Production)
+  # # ========================================
+  # redis:
+  #   image: redis:8.2-alpine
+  #   container_name: eshop-redis
+  #   environment:
+  #     REDIS_PASSWORD: ${REDIS_PASSWORD}
+  #   volumes:
+  #     - redis_data:/data
+  #   networks:
+  #     - eshop-network
+  #   restart: unless-stopped
+  #   command: redis-server --requirepass ${REDIS_PASSWORD:-defaultpassword} --appendonly yes
+  #   healthcheck:
+  #     test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+  #     interval: 30s
+  #     timeout: 3s
+  #     retries: 3
+  #   profiles:
+  #     - redis
+  #     - backend-services
 
-  # ========================================
-  # PostgreSQL Service (Production)
-  # ========================================
-  postgres:
-    image: postgres:18-alpine
-    container_name: eshop-postgres
-    environment:
-      POSTGRES_DB: ${DB_NAME:-eshop}
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_HOST_AUTH_METHOD: trust  # Add this for initial setup
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./backups:/backups
-    networks:
-      - eshop-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+  # # ========================================
+  # # PostgreSQL Service (Production)
+  # # ========================================
+  # postgres:
+  #   image: postgres:18-alpine
+  #   container_name: eshop-postgres
+  #   environment:
+  #     POSTGRES_DB: ${DB_NAME:-eshop}
+  #     POSTGRES_USER: ${DB_USER:-postgres}
+  #     POSTGRES_PASSWORD: ${DB_PASSWORD}
+  #     POSTGRES_HOST_AUTH_METHOD: trust  # Add this for initial setup
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #     - ./backups:/backups
+  #   networks:
+  #     - eshop-network
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
 
   # # ========================================
   # # Nginx Reverse Proxy (Optional)
@@ -148,25 +151,25 @@ services:
   #   profiles:
   #     - nginx
 
-# Run a dev SMTP server like Mailpit/MailHog in Docker
-# ========================================
-# Mailpit Service
-# ========================================
-  mailpit:
-    image: axllent/mailpit:latest
-    container_name: eshop-mailpit
-    environment:
-      SMTP_HOST: mailpit
-      SMTP_PORT: 1025
-      SMTP_USER: mailpit
-      SMTP_PASSWORD: mailpit
-      SMTP_FROM: noreply@eshop.com
-    ports:
-      - "8025:8025"   # Web UI
-      - "1025:1025"   # SMTP
-    networks:
-      - eshop-network
-    restart: unless-stopped
+# # Run a dev SMTP server like Mailpit/MailHog in Docker
+# # ========================================
+# # Mailpit Service
+# # ========================================
+#   mailpit:
+#     image: axllent/mailpit:latest
+#     container_name: eshop-mailpit
+#     environment:
+#       SMTP_HOST: mailpit
+#       SMTP_PORT: 1025
+#       SMTP_USER: mailpit
+#       SMTP_PASSWORD: mailpit
+#       SMTP_FROM: noreply@eshop.com
+#     ports:
+#       - "8025:8025"   # Web UI
+#       - "1025:1025"   # SMTP
+#     networks:
+#       - eshop-network
+#     restart: unless-stopped
 
 # ========================================
 # Networks
@@ -175,20 +178,21 @@ networks:
   eshop-network:
     name: eshop-network
     driver: bridge
+    external: true
 
 # ========================================
 # Volumes
 # ========================================
 volumes:
-  redis_data:
-    name: eshop-redis-data
-    driver: local
-  postgres_data:
-    name: eshop-postgres-data
-    driver: local
   uploads_data:
     name: eshop-uploads-data
     driver: local
   logs_data:
     name: eshop-logs-data
     driver: local 
+  # redis_data:
+  #   name: eshop-redis-data
+  #   driver: local
+  # postgres_data:
+  #   name: eshop-postgres-data
+  #   driver: local
