--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -66,13 +66,13 @@ services:
       - uploads_data:/app/uploads
       - logs_data:/app/logs
       
-    depends_on:
-      redis:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-      mailpit:
-        condition: service_started
+    # depends_on:
+    #   redis:
+    #     condition: service_healthy
+    #   postgres:
+    #     condition: service_healthy
+    #   mailpit:
+    #     condition: service_started
     networks:
       - eshop-network
       
